[package]
name = "modbus-rs"
version = "0.8.0"
edition = "2024"
authors = ["Raghava Ch <ch.raghava44@gmail.com>"]
license.workspace = true
repository = "https://github.com/Raghava-Ch/modbus-rs"
homepage = "https://github.com/Raghava-Ch/modbus-rs"
readme = "README.md"
keywords = ["modbus", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]
description = "Feature-gated, low-footprint Modbus client and server stack for no_std and std targets (MCU/RTOS/Linux/macOS/Windows) with TCP/RTU/ASCII, sync+async APIs, jittered backoff retries, and optional C/WASM bindings."

[dependencies]
mbus-core = { workspace = true }
mbus-serial = { workspace = true, optional = true }
mbus-network = { workspace = true, optional = true }
mbus-client = { workspace = true, optional = true }
mbus-async = { workspace = true, optional = true }
mbus-server = { workspace = true, optional = true }
mbus-gateway = { workspace = true, optional = true }

heapless = { workspace = true }

[dev-dependencies]
anyhow = "1.0.102"
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
mbus-server = { version = "0.8.0", path = "../mbus-server" }

[build-dependencies]

[features]
# By default, Modbus client and server services are enabled.
# To reduce binary size or exclude unused functionality,
# disable default features and enable only the services you need.
# These features are re-exported from the `mbus-core` crate.
default = [
    "client",
    "server",
    "serial-rtu",
    "network-tcp",
    "async",
    "coils",
    "holding-registers",
    "input-registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]
# Internal sentinel: set by any feature that requires std. The no_std cfg_attr in
# lib.rs checks only this flag, so adding a new std-requiring feature is a single
# line change here rather than a lib.rs edit.
std-required = []
client = ["mbus-client"]
server = ["dep:mbus-server", "std-required"]
serial-rtu = [
    "mbus-serial",
    "mbus-async?/serial-rtu",
    "mbus-async?/server-serial",
    "std-required",
]
serial-ascii = [
    "mbus-serial",
    "mbus-core/serial-ascii",
    "mbus-async?/serial-ascii",
    "mbus-async?/server-serial",
    "std-required",
]
network-tcp = [
    "mbus-network",
    "mbus-async?/network-tcp",
    "mbus-async?/server-tcp",
    "std-required",
]
coils = ["mbus-core/coils", "mbus-async?/coils"]
registers = ["mbus-core/registers", "mbus-async?/registers"]
holding-registers = ["registers"]
input-registers = ["registers"]
discrete-inputs = ["mbus-core/discrete-inputs", "mbus-async?/discrete-inputs"]
fifo = ["mbus-core/fifo", "mbus-async?/fifo"]
file-record = ["mbus-core/file-record", "mbus-async?/file-record"]
diagnostics = ["mbus-core/diagnostics", "mbus-async?/diagnostics"]
diagnostics-stats = [
    "diagnostics",
    "mbus-async?/diagnostics-stats",
    "mbus-server?/diagnostics-stats",
]
logging = [
    "mbus-network?/logging",
    "mbus-serial?/logging",
    "mbus-client?/logging",
    "std-required",
]
async = ["dep:mbus-async", "std-required"]
traffic = ["mbus-client?/traffic", "mbus-async?/traffic"]
gateway = ["dep:mbus-gateway"]

# Convenience feature for no_std / embedded targets.
# Enables the client state machine and all protocol model features.
# Does NOT pull in any transport (network-tcp, serial-rtu, serial-ascii) or async,
# so it compiles on targets without std.
# Pair with your own Transport implementation.
no-std = [
    "client",
    "coils",
    "holding-registers",
    "input-registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]

[[example]]
name = "modbus_rs_client_async_tcp"
path = "examples/client/network-tcp/async/tcp.rs"
required-features = ["async"]

[[example]]
name = "modbus_rs_client_async_serial_rtu"
path = "examples/client/serial-rtu/async/rtu.rs"
required-features = ["async", "serial-rtu"]

[[example]]
name = "modbus_rs_client_traffic_sync_tcp"
path = "examples/client/network-tcp/sync/traffic.rs"
required-features = ["traffic", "client", "network-tcp", "coils"]

[[example]]
name = "modbus_rs_client_traffic_async_tcp"
path = "examples/client/network-tcp/async/traffic.rs"
required-features = ["async", "traffic", "network-tcp", "coils"]

[[example]]
name = "modbus_rs_client_tcp_coils"
path = "examples/client/network-tcp/sync/coils.rs"

[[example]]
name = "modbus_rs_client_tcp_registers"
path = "examples/client/network-tcp/sync/registers.rs"

[[example]]
name = "modbus_rs_client_tcp_discrete_inputs"
path = "examples/client/network-tcp/sync/discrete_inputs.rs"

[[example]]
name = "modbus_rs_client_tcp_device_id"
path = "examples/client/network-tcp/sync/device_id.rs"

[[example]]
name = "modbus_rs_client_tcp_backoff_jitter"
path = "examples/client/network-tcp/sync/backoff_jitter.rs"

[[example]]
name = "modbus_rs_client_tcp_logging"
path = "examples/client/network-tcp/sync/logging.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_coils"
path = "examples/client/serial-rtu/sync/coils.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_registers"
path = "examples/client/serial-rtu/sync/registers.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_discrete_inputs"
path = "examples/client/serial-rtu/sync/discrete_inputs.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_device_id"
path = "examples/client/serial-rtu/sync/device_id.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_backoff_jitter"
path = "examples/client/serial-rtu/sync/backoff_jitter.rs"

[[example]]
name = "modbus_rs_client_serial_ascii_coils"
path = "examples/client/serial-ascii/sync/coils.rs"

[[example]]
name = "modbus_rs_server_tcp_demo"
path = "examples/server/network-tcp/sync/demo.rs"
required-features = ["coils", "holding-registers", "input-registers"]

[[example]]
name = "modbus_rs_server_async_tcp_demo"
path = "examples/server/network-tcp/async/demo.rs"
required-features = [
    "server",
    "async",
    "network-tcp",
    "coils",
    "holding-registers",
    "input-registers",
]

[[example]]
name = "modbus_rs_server_async_tcp_traffic"
path = "examples/server/network-tcp/async/traffic.rs"
required-features = [
    "server",
    "async",
    "network-tcp",
    "coils",
    "holding-registers",
    "traffic",
]

[[example]]
name = "modbus_rs_server_async_fifo_file_record_demo"
path = "examples/server/network-tcp/async/fifo_file_record_demo.rs"
required-features = ["server", "async", "network-tcp", "fifo", "file-record"]

[[example]]
name = "modbus_rs_server_std_transport_client_demo"
path = "examples/server/network-tcp/sync/shared_state.rs"
required-features = [
    "network-tcp",
    "coils",
    "holding-registers",
    "input-registers",
]

[[example]]
name = "fifo_file_record_demo"
path = "examples/server/network-tcp/sync/fifo_file_record_demo.rs"
required-features = ["server", "network-tcp", "fifo", "file-record"]

[[example]]
name = "modbus_rs_server_serial_rtu_demo"
path = "examples/server/serial-rtu/sync/demo.rs"
required-features = [
    "serial-rtu",
    "coils",
    "holding-registers",
    "input-registers",
]

[[example]]
name = "modbus_rs_server_serial_rtu_manual_no_macros"
path = "examples/server/serial-rtu/sync/manual_app_no_macros.rs"
required-features = [
    "serial-rtu",
    "coils",
    "holding-registers",
    "input-registers",
]

[[example]]
name = "modbus_rs_server_serial_ascii_demo"
path = "examples/server/serial-ascii/sync/demo.rs"
required-features = [
    "serial-ascii",
    "coils",
    "holding-registers",
    "input-registers",
]

[[example]]
name = "modbus_rs_gateway_sync_tcp_to_rtu"
path = "examples/gateway/sync_tcp_to_rtu.rs"
required-features = ["gateway", "serial-rtu", "network-tcp"]

[[example]]
name = "modbus_rs_gateway_async_tcp_to_tcp"
path = "examples/gateway/async_tcp_to_tcp.rs"
required-features = ["gateway", "async", "network-tcp"]
